# craft

./: Cargo.toml  README.md  STYLE_GUIDE.md  index.html  rust-toolchain.toml  rustfmt.toml  wasm-build.sh
counter/: Cargo.toml
counter/src/: main.rs
crates/craft/: Cargo.toml
crates/craft/src/: lib.rs  signals.rs
crates/craft/src/elements/: conditional.rs  container.rs  element.rs  image.rs  mod.rs  slider.rs  text.rs  tinyvg.rs  window.rs
crates/craft_calendar/: Cargo.toml  build.rs
crates/craft_calendar/src/: apple.rs  lib.rs  sys_locale.rs  windows.rs
crates/craft_core/: Cargo.toml  build.rs
crates/craft_core/src/: app.rs  app_message.rs  craft_runtime.rs  craft_winit_state.rs  lib.rs  location.rs  options.rs  view_introspection.rs  wasm_queue.rs  window_context.rs
crates/craft_core/src/accessibility/: access_handler.rs  activation_handler.rs  deactivation_handler.rs  mod.rs
crates/craft_core/src/animation/: animation.rs
crates/craft_core/src/animations/: animation.rs
crates/craft_core/src/components/: component.rs  mod.rs  update_result.rs  web_link.rs
crates/craft_core/src/devtools/: dev_tools_component.rs  dev_tools_element.rs  element_tree_view.rs  layout_view.rs  layout_window.rs  mod.rs  style_window.rs  tree_view.rs  tree_window.rs
crates/craft_core/src/elements/: base_element_state.rs  canvas.rs  container.rs  dropdown.rs  element.rs  element_data.rs  element_event_impls.rs  element_pre_order_iterator.rs  element_states.rs  element_styles.rs  empty.rs  font.rs  image.rs  layout_context.rs  mod.rs  overlay.rs  scroll_state.rs  slider.rs  stateful_element.rs  switch.rs  text.rs  text_input.rs  thumb.rs  tinyvg.rs
crates/craft_core/src/events/: event_dispatch.rs  event_handlers.rs  internal.rs  mod.rs  pointer_button.rs  update_queue_entry.rs
crates/craft_core/src/geometry/: borders.rs  cornerside.rs  element_box.rs  mod.rs  point.rs  rectangle.rs  size.rs  trblrectangle.rs
crates/craft_core/src/layout/: layout_context.rs  layout_item.rs  mod.rs
crates/craft_core/src/markdown/: mod.rs
crates/craft_core/src/reactive/: element_id.rs  element_state_store.rs  fiber_node.rs  fiber_tree.rs  mod.rs  reactive_tree.rs  tests.rs  tracked_changes.rs  tree.rs
crates/craft_core/src/renderer/: blank_renderer.rs  image_adapter.rs  mod.rs  renderer.rs  text.rs  tinyvg_helpers.rs
crates/craft_core/src/resource_manager/: identifier.rs  image.rs  lock_free_map.rs  mod.rs  resource.rs  resource_data.rs  resource_type.rs  tinyvg_resource.rs  wasm_queue.rs
crates/craft_core/src/style/: mod.rs  style_flags.rs  styles.rs  taffy_conversions.rs
crates/craft_core/src/text/: actions.rs  cached_editor.rs  editor.rs  mod.rs  parley_editor.rs  text_context.rs  text_render_data.rs
crates/craft_dylib/: Cargo.toml
crates/craft_dylib/src/: lib.rs
crates/craft_logger/: Cargo.toml
crates/craft_logger/src/: lib.rs
crates/craft_renderer/: Cargo.toml
crates/craft_renderer/src/: blank_renderer.rs  brush.rs  helpers.rs  image_adapter.rs  lib.rs  render_command.rs  render_list.rs  renderer.rs  renderer_type.rs  resource_mapper.rs  screenshot.rs  sort_commands.rs  target_item.rs  text_renderer_data.rs  tinyvg_helpers.rs
crates/craft_renderer/src/vello/: mod.rs  tinyvg.rs
crates/craft_renderer/src/vello_cpu/: image.rs  mod.rs  text.rs  tinyvg.rs
crates/craft_renderer/src/vello_hybrid/: image.rs  mod.rs  render_context.rs  text.rs  tinyvg.rs
crates/craft_resource_manager/: Cargo.toml
crates/craft_resource_manager/src/: decoders.rs  identifier.rs  image.rs  lib.rs  lock_free_map.rs  resource.rs  resource_data.rs  resource_event.rs  resource_type.rs  tinyvg_resource.rs
crates/craft_retained/: Cargo.toml
crates/craft_retained/src/: app.rs  craft_winit_state.rs  craftcallback.rs  lib.rs  options.rs  wasm_queue.rs  window_context.rs  window_manager.rs
crates/craft_retained/src/accessibility/: access_handler.rs  mod.rs
crates/craft_retained/src/animations/: animation.rs  mod.rs
crates/craft_retained/src/document/: core.rs  document.rs  document_manager.rs  mod.rs
crates/craft_retained/src/elements/: audio.rs  button.rs  checkbox.rs  checkboxgroup.rs  container.rs  dropdown.rs  dyn_element.rs  element.rs  element_data.rs  element_id.rs  element_id_map.rs  image.rs  internal_helpers.rs  mod.rs  (+8 more)
crates/craft_retained/tests/: counter.rs  test_utils.rs
crates/craft_runtime/: Cargo.toml
crates/craft_runtime/src/: lib.rs  run_later.rs
crates/oku_core/: Cargo.toml
crates/oku_core/src/: geometry.rs  lib.rs  oku_runtime.rs  oku_winit_state.rs  options.rs  view_introspection.rs
examples/animations/: Cargo.toml  main.rs
examples/counter/: Cargo.toml  counter.rs  counter_android.rs  main.rs
examples/counter_retained/: Cargo.toml  counter_android.rs  main.rs
examples/custom_event_loop/: Cargo.toml  custom_event_loop.rs  main.rs  shader.wgsl  triangle.wgsl  wgpu_triangle.rs
examples/gallery/: Cargo.toml  main.rs
examples/jsframeworkbench/: Cargo.toml  main.rs
examples/multiwindow/: Cargo.toml  main.rs
examples/pointer_events/: Cargo.toml  main.rs
examples/request/: Cargo.toml  ani_list.rs  main.rs  request.rs
examples/text/: Cargo.toml  main.rs  text.rs
examples/tour/: Cargo.toml  README.md  main.rs  mp3_player.rs  tour.rs
examples/util/: Cargo.toml
examples/util/src/: lib.rs
website/: Cargo.toml  index.html  wasm-build.sh
website/assets/: brush_24dp_000000_FILL0_wght400_GRAD0_opsz24.tvg  code_24dp_000000_FILL0_wght400_GRAD0_opsz24.tvg  devices_24dp_000000_FILL0_wght400_GRAD0_opsz24.tvg  electric_bolt_24dp_000000_FILL0_wght400_GRAD0_opsz24.tvg  view_comfy_24dp_000000_FILL0_wght400_GRAD0_opsz24.tvg
website/src/: about.rs  code_editor.rs  docs.rs  examples.rs  index.rs  lib.rs  link.rs  main.rs  navbar.rs  page_wrapper.rs  router.rs  theme.rs  web_link.rs
website/src/counter/: counter.rs
website/src/docs/: docs.rs  docs_component.rs  hello_world.rs  how_to_contribute.rs  installation.rs  markdown_viewer.rs  mod.rs  state_management.rs  styling.rs
website/src/text/: text.rs
xtask/: Cargo.toml
xtask/src/: main.rs
(+284 files in other folders)
