[workspace]
resolver = "2"

members = [
    "crates/craft",
    "crates/craft_core",
    "crates/craft_dylib",
    "crates/craft_logger",
    "examples/util",
    "examples/request",
    "examples/accordion",
    "examples/counter",
    "examples/text",
    "examples/tour",
    "examples/events",
    "examples/overlay",
    "website", "crates/craft",
]

[workspace.package]
edition = "2024"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
debug = false

[workspace.dependencies]
reqwest = { version = "0.12.15", default-features = false }
tracing = { version = "0.1.41" }
tracing-subscriber = {version = "0.3.19"}
