[workspace]
resolver = "2"

members = [
    "crates/craft_retained",
    "crates/craft_logger",
    "xtask",
    "examples/util",
    "examples/counter_retained",
    "examples/multiwindow",
    "examples/pointer_events",
    "examples/text",
    "examples/jsframeworkbench",
    "crates/syntect_dumper", "crates/craft_renderer", "crates/craft_primitives", "crates/craft_resource_manager", "crates/craft_runtime",
]

[workspace.package]
edition = "2024"

[profile.release]
# For fast build/run and profiling
debug = true

## For fast run & small binary:
#opt-level = 3
#lto = true
#codegen-units = 1
#strip = true
#debug = false

[workspace.dependencies]
reqwest = { version = "0.13.1", default-features = false }
tracing = { version = "0.1.41" }
tracing-subscriber = {version = "0.3.19"}

[workspace.dependencies.peniko]
version = "0.6.0"
default-features = false
features = ["std"]


[workspace.dependencies.kurbo]
version = "0.13.0"
default-features = false
features = ["std"]

[workspace.dependencies.dpi]
version = "0.1.2"
default-features = false
features = []

[workspace.dependencies.tokio]
version = "1.49.0"
default-features = false
features = ["sync", "time"]

[workspace.dependencies.image]
version = "0.25.9"
default-features = false
features = []

[workspace.dependencies.tinyvg-rs]
version = "0.0.2"
default-features = false
features = []

[workspace.dependencies.chrono]
version = "0.4.41"
default-features = false
features = ["std"]

[workspace.dependencies.cfg-if]
version = "1.0.1"

[workspace.dependencies.winit]
version = "0.30.12"
default-features = false
features = []