[package]
name = "website"
version = "0.1.0"
edition = "2024"

[dependencies]

tracing-subscriber = "0.3.19"
tracing = "0.1.41"

util = { path = "../examples/util" }

serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.133"
web-sys = { version = "0.3.77", features = ["Window", "Location", "History"] }

[dependencies.craft]
path = "../crates/craft"
default-features = false
features = ["vello_cpu_renderer", "devtools", "http_client", "png", "jpeg", "accesskit", "sytem_fonts"]
package = "craft_gui"

[target.'cfg(target_arch = "wasm32")'.dependencies]
tracing-web = "0.1.3"
console_error_panic_hook = "0.1.7"

[dependencies.reqwest]
version = "0.12.15"
default-features = false
features = ["rustls-tls", "json"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
open = "5"