[package]
name = "website"
version = "0.1.0"
edition = "2024"

[dependencies]

tracing-subscriber = "0.3.19"
tracing = "0.1.41"

util = { path = "../examples/util" }

serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.133"
web-sys = { version = "0.3.77", features = ["Window", "Location", "History"] }

[target.'cfg(target_arch = "wasm32")'.dependencies.craft_retained]
path = "../crates/craft_retained"
default-features = false
features = [
    "vello_hybrid_renderer",
    "vello_hybrid_renderer",
    "http_client",
    "png",
    "jpeg",
    "accesskit",
    "system_fonts",
    "markdown"
]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.craft_retained]
path = "../crates/craft_retained"
default-features = false
features = [
    "vello_renderer",
    "http_client",
    "png",
    "jpeg",
    "accesskit",
    "system_fonts",
    "markdown"
]

[target.'cfg(target_arch = "wasm32")'.dependencies]
tracing-web = "0.1.3"
console_error_panic_hook = "0.1.7"

[dependencies.reqwest]
workspace = true
default-features = false
features = ["rustls", "json"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
open = "5"