[package]
name = "craft_gui"
description = "A reactive GUI focused on being practical. Inspired by Elm and React. No macros."
version = "0.1.1"
edition = "2024"
license-file = "LICENSE"
homepage = "https://craftgui.com/"
repository = "https://github.com/craft-gui/craft"
readme = "../../README.md"

[features]
# Force dynamic linking, which improves iterative compile times
dynamic_linking = ["dep:craft_dylib", "craft_core/dynamic_linking"]
devtools = ["craft_core/dev_tools"]
http_client = ["craft_core/http_client"]
vello_renderer = ["craft_core/vello_renderer"]
vello_cpu_renderer = ["craft_core/vello_cpu_renderer"]
vello_hybrid_renderer = ["craft_core/vello_hybrid_renderer"]

default = ["craft_core/vello_renderer", "craft_core/http_client", "craft_core/dev_tools"]


[dependencies]
craft_dylib = { path = "../craft_dylib", default-features = false, optional = true, version = "0.1.1" }
craft_core = { path = "../craft_core", default-features = false, version = "0.1.1" }

[lib]
