[package]
name = "craft_gui"
description = "A reactive GUI focused on being practical. Inspired by Elm and React. No macros."
version = "0.1.1"
edition = "2024"
license-file = "LICENSE"
homepage = "https://craftgui.com/"
repository = "https://github.com/craft-gui/craft"
readme = "../../README.md"

[features]
# Force dynamic linking, which improves iterative compile times
dynamic_linking = ["dep:craft_dylib", "craft_core/dynamic_linking"]
devtools = ["craft_core/dev_tools"]
clipboard = ["craft_core/clipboard"]

png = ["craft_core/png"]
jpeg = ["craft_core/jpeg"]

accesskit = ["craft_core/accesskit"]

sytem_fonts = ["craft_core/system_fonts"]

http_client = ["craft_core/http_client"]
vello_renderer = ["craft_core/vello_renderer"]
vello_cpu_renderer = ["craft_core/vello_cpu_renderer"]
vello_hybrid_renderer = ["craft_core/vello_hybrid_renderer"]

default = ["vello_renderer", "http_client", "devtools", "png", "jpeg", "accesskit", "clipboard", "sytem_fonts"]


[dependencies]
craft_dylib = { path = "../craft_dylib", default-features = false, optional = true, version = "0.1.1" }
craft_core = { path = "../craft_core", default-features = false, version = "0.1.1" }

[lib]
