[package]
name = "craft_calendar"
version = "0.1.0"
edition.workspace = true

[dependencies]
sys-locale = "0.3.2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = [
    "Win32_Globalization",
] }

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
web-sys = { version = "0.3.103", features = ["Window", "Navigator"] }

[build-dependencies]
quick-xml = "0.41.0"
reqwest = { workspace = true, features = ["blocking", "rustls"] }