[package]
name = "craft_calendar"
version = "0.1.0"
edition.workspace = true

[dependencies]
sys-locale = "0.3.2"

icu = { version = "2.2", features = ["compiled_data"] }

chrono = { workspace = true, features = ["clock"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
chrono = { workspace = true, features = ["wasmbind"] }

[target.'cfg(windows)'.dependencies]

[target.'cfg(windows)'.dependencies.windows]
workspace = true
features = [
    "Win32_Globalization",
]

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
web-sys = { version = "0.3.103", features = ["Window", "Navigator"] }