[package]
name = "craft_core"
description = "Core library for the Craft GUI framework."
version = "0.1.0"
edition = "2024"
resolver = "2"
license-file = "LICENSE"
homepage = "https://craftgui.com/"
repository = "https://github.com/craft-gui/craft"

[features]
dev_tools = []
dynamic_linking = []

vello_renderer = ["dep:vello", "dep:wgpu", "wgpu/fragile-send-sync-non-atomic-wasm"]
vello_cpu_renderer = ["dep:vello_cpu", "dep:softbuffer", "dep:vello_common"]
vello_hybrid_renderer = ["dep:vello_hybrid", "dep:vello_common", "dep:wgpu", "wgpu/fragile-send-sync-non-atomic-wasm"]
http_client = ["dep:reqwest"]

default = ["vello_renderer", "http_client"]


[dependencies]
craft_logging = { path = "../craft_logger", version = "0.1.0" }

# Add at the next stable release.
#accesskit = "0.17.1"
#accesskit_winit = { version = "0.23.1", features = ["tokio"] }

cfg-if = "1.0.0"

[dependencies.bitflags]
version = "2.9.0"
features = ["std"]


[dependencies.peniko]
version = "0.4.0"
default-features = false
features = ["std"]

[dependencies.tinyvg-rs]
version = "0.0.1"
default-features = false

[dependencies.glam]
version = "0.30.3"
default-features = false
features = ["std"]

[dependencies.rustc-hash]
version = "2.1.1"
default-features = false
features = ["std"]

[target.'cfg(any(target_os = "windows", target_os = "macos", target_os = "linux"))'.dependencies.clipboard-rs]
version = "0.2.4"

[dependencies.image]
version = "0.25.6"
default-features = false
features = ["jpeg", "png"]

[dependencies.taffy]
version = "0.8.1"
default-features = false
features = ["std", "taffy_tree", "flexbox", "content_size", "block_layout"]

[dependencies.chrono]
version = "0.4.41"
default-features = false
features = ["std"]

[dependencies.vello]
version = "0.5.0"
default-features = false
features = ["wgpu"]
optional = true

[dependencies.vello_cpu]
version = "0.0.1"
optional = true

[dependencies.vello_hybrid]
version = "0.5.0"
package = "vello_hybrid_craft"
optional = true

[dependencies.vello_common]
version = "0.0.1"
optional = true

[dependencies.softbuffer]
version = "0.4.6"
optional = true

[dependencies.wgpu]
version = "24.0.3"
default-features = false
features = ["wgsl"]
optional = true

[target.'cfg(not(target_os = "android"))'.dependencies.winit]
package = "winit_craft"
version = "0.30.10"
features = []

[target.'cfg(target_os = "android")'.dependencies.winit]
package = "winit_craft"
version = "0.30.10"
features = ["android-native-activity"]

[dependencies.parley]
version = "0.4.0"
default-features = false
features = ["std", "system"]

[target.'cfg(not(target_os = "android"))'.dependencies.reqwest]
version = "0.12.15"
default-features = false
features = ["native-tls"]
optional = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
#accesskit_winit = { version = "0.23.1" }
wasm-bindgen-futures = "0.4.50"

[target.'cfg(target_arch = "wasm32")'.dependencies.web-time]
version = "1.1.0"
default-features = false
features = []

[target.'cfg(target_arch = "wasm32")'.dependencies.wasm-bindgen]
version = "0.2.100"
default-features = false
features = ["std", "msrv"]

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3.77"
default-features = false
features = [
    "Document",
    "Window",
    "Element",
]

[target.'cfg(target_arch = "wasm32")'.dependencies.tokio]
version = "1.45.0"
default-features = false
features = ["sync", "time"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.tokio]
version = "1.45.0"
default-features = false
features = ["rt-multi-thread", "sync", "time"]

[target.'cfg(target_os = "android")'.dependencies.reqwest]
workspace = true
default-features = false
features = ["rustls-tls"]
optional = true