[package]
name = "craft_core"
description = "Core library for the Craft GUI framework."
version = "0.1.1"
edition = "2024"
resolver = "2"
license-file = "LICENSE"
homepage = "https://craftgui.com/"
repository = "https://github.com/craft-gui/craft"

[features]
dev_tools = []
dynamic_linking = []
clipboard = ["dep:clipboard-rs"]

system_fonts = ["parley/system"]

png = ["image/png"]
jpeg = ["image/jpeg"]

accesskit = ["dep:accesskit", "dep:accesskit_winit", "parley/accesskit"]

vello_renderer = ["dep:vello", "dep:wgpu", "wgpu/fragile-send-sync-non-atomic-wasm"]
vello_cpu_renderer = ["dep:vello_cpu", "dep:softbuffer", "dep:vello_common"]
vello_hybrid_renderer = ["dep:vello_hybrid", "dep:vello_common", "dep:wgpu", "wgpu/fragile-send-sync-non-atomic-wasm"]
http_client = ["dep:reqwest"]
markdown = ["dep:pulldown-cmark", "code_highlighting", "link"]
code_highlighting = ["dep:syntect"]
link = ["dep:open"]

default = ["vello_renderer", "http_client", "clipboard", "accesskit"]


[dependencies]
craft_logging = { path = "../craft_logger", version = "0.1.0" }

cfg-if = "1.0.0"

[dependencies.accesskit_winit]
version = "0.27.0"
default-features = false
features = ["tokio", "rwh_06", "accesskit_unix"]
optional = true

[dependencies.accesskit]
version = "0.19.0"
default-features = false
optional = true

[dependencies.bitflags]
version = "2.9.1"
features = ["std"]

[dependencies.kurbo]
version = "0.11.2"
default-features = false
features = ["std"]


[dependencies.peniko]
version = "0.4.0"
default-features = false
features = ["std"]

[dependencies.tinyvg-rs]
version = "0.0.2"
default-features = false

[dependencies.rustc-hash]
version = "2.1.1"
default-features = false
features = ["std"]

[target.'cfg(any(target_os = "windows", target_os = "macos", target_os = "linux"))'.dependencies.clipboard-rs]
version = "0.2.4"
optional = true

[dependencies.pulldown-cmark]
version = "0.13.0"
default-features = false
features = []
optional = true

[dependencies.syntect]
version = "5.2"
default-features = false
features = ["default-fancy", "parsing", "dump-load", "default-themes"]
optional = true

[dependencies.image]
version = "0.25.6"
default-features = false
features = []

[dependencies.taffy]
version = "0.8.2"
default-features = false
features = ["std", "taffy_tree", "flexbox", "content_size", "block_layout"]

[dependencies.chrono]
version = "0.4.41"
default-features = false
features = ["std"]

[dependencies.vello]
git = "https://github.com/linebender/vello.git"
rev = "cfee557bc53eef4a7efc9ebee2620d1369b9bfba"
default-features = false
features = ["wgpu"]
optional = true

[dependencies.vello_cpu]
git = "https://github.com/linebender/vello.git"
rev = "cfee557bc53eef4a7efc9ebee2620d1369b9bfba"
optional = true

[dependencies.vello_hybrid]
git = "https://github.com/linebender/vello.git"
rev = "cfee557bc53eef4a7efc9ebee2620d1369b9bfba"
default-features = false
features = ["default"]
optional = true

[dependencies.vello_common]
git = "https://github.com/linebender/vello.git"
rev = "cfee557bc53eef4a7efc9ebee2620d1369b9bfba"
optional = true

[dependencies.softbuffer]
version = "0.4.6"
optional = true

[dependencies.wgpu]
version = "24.0.3"
default-features = false
features = ["wgsl"]
optional = true

[target.'cfg(not(target_os = "android"))'.dependencies.winit]
version = "0.30.11"
features = []

[target.'cfg(target_os = "android")'.dependencies.winit]
version = "0.30.11"
features = ["android-native-activity"]

[dependencies.ui-events]
git = "https://github.com/AustinMReppert/ui-events"
branch = "experiment"

[dependencies.ui-events-winit]
git = "https://github.com/AustinMReppert/ui-events"
branch = "experiment"

[dependencies.parley]
version = "0.5.0"
default-features = false
features = ["std"]

[target.'cfg(not(target_os = "android"))'.dependencies.reqwest]
workspace = true
default-features = false
features = ["native-tls"]
optional = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.50"

[target.'cfg(target_arch = "wasm32")'.dependencies.web-time]
version = "1.1.0"
default-features = false
features = []

[target.'cfg(target_arch = "wasm32")'.dependencies.wasm-bindgen]
version = "0.2.100"
default-features = false
features = ["std", "msrv"]

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3.77"
default-features = false
features = [
    "Document",
    "Window",
    "Element",
]

[target.'cfg(target_arch = "wasm32")'.dependencies.tokio]
version = "1.45.1"
default-features = false
features = ["sync", "time"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.open]
version = "5.3.2"
default-features = false
optional = true
features = []

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.tokio]
version = "1.45.1"
default-features = false
features = ["rt-multi-thread", "sync", "time"]

[target.'cfg(target_os = "android")'.dependencies.reqwest]
workspace = true
default-features = false
features = ["rustls-tls"]
optional = true