[package]
name = "craft_dylib"
description = "Allow Craft to be compiled as a dynamic library."
version = "0.1.0"
edition = "2024"
resolver = "2"
license-file = "LICENSE"
homepage = "https://craftgui.com/"
repository = "https://github.com/craft-gui/craft"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["dylib"]

[dependencies]
craft_core = { path = "../craft_core", default-features = false, version = "0.1.0" }