[package]
name = "craft_renderer"
version = "0.1.1"
edition.workspace = true

[features]
vello_renderer = ["dep:vello", "dep:wgpu", "wgpu/fragile-send-sync-non-atomic-wasm"]
vello_cpu_renderer = ["dep:vello_cpu", "dep:softbuffer", "dep:vello_common"]
vello_hybrid_renderer = ["dep:vello_hybrid", "dep:vello_common", "dep:wgpu", "wgpu/fragile-send-sync-non-atomic-wasm"]
vello_hybrid_renderer_webgl = ["wgpu/webgl"]

[dependencies]

[dependencies.vello]
git = "https://github.com/linebender/vello.git"
rev = "459e0a7b1fa328d8b6adeea0c31a2069621a85d0"
default-features = false
features = ["wgpu"]
optional = true

[dependencies.vello_cpu]
git = "https://github.com/linebender/vello.git"
rev = "459e0a7b1fa328d8b6adeea0c31a2069621a85d0"
optional = true
features = ["multithreading"]

[dependencies.vello_hybrid]
git = "https://github.com/linebender/vello.git"
rev = "459e0a7b1fa328d8b6adeea0c31a2069621a85d0"
default-features = false
features = ["default"]
optional = true

[dependencies.vello_common]
git = "https://github.com/linebender/vello.git"
rev = "459e0a7b1fa328d8b6adeea0c31a2069621a85d0"
optional = true

[dependencies.softbuffer]
version = "0.4.6"
optional = true

[dependencies.wgpu]
version = "26.0.1"
default-features = false
features = ["wgsl", "vulkan", "dx12"]
optional = true

[dependencies.peniko]
workspace = true

[dependencies.craft_primitives]
path = "../craft_primitives"
default-features = false
version = "0.1.1"


[dependencies.craft_resource_manager]
path = "../craft_resource_manager"
default-features = false
version = "0.1.1"

[dependencies.winit]
workspace = true

[dependencies.cfg-if]
workspace = true

[dependencies.tinyvg-rs]
workspace = true

[dependencies.chrono]
workspace = true

