[package]
name = "craft_renderer"
version = "0.1.1"
edition.workspace = true

[features]
vello_renderer = ["dep:vello", "dep:wgpu", "wgpu/fragile-send-sync-non-atomic-wasm"]
vello_cpu_renderer = ["dep:vello_cpu", "dep:softbuffer", "dep:vello_common"]
vello_hybrid_renderer = ["dep:vello_hybrid", "dep:vello_common", "dep:wgpu", "wgpu/fragile-send-sync-non-atomic-wasm"]
vello_hybrid_renderer_webgl = ["wgpu/webgl"]

[dependencies]

[dependencies.vello]
git = "https://github.com/linebender/vello.git"
rev = "492beec0a811c44eb7064d50e95dd2cf582dcc46"
default-features = false
features = ["wgpu"]
optional = true

[dependencies.glifo]
git = "https://github.com/linebender/vello.git"
rev = "492beec0a811c44eb7064d50e95dd2cf582dcc46"
default-features = false
features = ["std"]

[dependencies.vello_cpu]
git = "https://github.com/linebender/vello.git"
rev = "492beec0a811c44eb7064d50e95dd2cf582dcc46"
optional = true
features = []

[dependencies.vello_hybrid]
git = "https://github.com/linebender/vello.git"
rev = "492beec0a811c44eb7064d50e95dd2cf582dcc46"
default-features = false
features = ["default"]
optional = true

[dependencies.vello_common]
git = "https://github.com/linebender/vello.git"
rev = "492beec0a811c44eb7064d50e95dd2cf582dcc46"
optional = true

[dependencies.softbuffer]
version = "0.4.8"
optional = true

[dependencies.wgpu]
version = "29.0.3"
default-features = false
features = ["wgsl", "vulkan", "dx12"]
optional = true

[dependencies.peniko]
workspace = true

[dependencies.craft_primitives]
path = "../craft_primitives"
default-features = false
version = "0.1.1"


[dependencies.craft_resource_manager]
path = "../craft_resource_manager"
default-features = false
version = "0.1.1"

[dependencies.winit]
workspace = true

[dependencies.tinyvg-rs]
workspace = true

[dependencies.chrono]
workspace = true

