[package]
name = "craft_retained"
description = "Core library for the Craft GUI framework."
version = "0.1.1"
edition = "2024"
resolver = "2"
license-file = "LICENSE"
homepage = "https://craftgui.com/"
repository = "https://github.com/craft-gui/craft"

[features]
dynamic_linking = []
clipboard = ["dep:clipboard-rs"]

system_fonts = ["parley/system"]

png = ["image/png"]
jpeg = ["image/jpeg"]

accesskit = ["dep:accesskit", "dep:accesskit_winit", "parley/accesskit"]

markdown = ["dep:pulldown-cmark", "code_highlighting", "link"]
code_highlighting = ["dep:syntect"]
link = ["dep:open"]

default = ["clipboard", "accesskit"]


[dependencies]
craft_logging = { path = "../craft_logger", version = "0.1.0" }

smol_str = "0.3.4"

[dependencies.cfg-if]
workspace = true

[dependencies.accesskit_winit]
version = "0.29.2"
default-features = false
features = ["tokio", "rwh_06", "accesskit_unix"]
optional = true

[dependencies.accesskit]
version = "0.21.1"
default-features = false
optional = true

[dependencies.bitflags]
version = "2.10.0"
features = ["std"]

[dependencies.kurbo]
workspace = true

[dependencies.smallvec]
version = "1.15.1"
default-features = false

[dependencies.peniko]
workspace = true

[dependencies.tinyvg-rs]
workspace = true

[dependencies.rustc-hash]
version = "2.1.1"
default-features = false
features = ["std"]

[target.'cfg(any(target_os = "windows", target_os = "macos", target_os = "linux"))'.dependencies.clipboard-rs]
version = "0.3.1"
optional = true

[dependencies.pulldown-cmark]
version = "0.13.0"
default-features = false
features = []
optional = true

[dependencies.syntect]
version = "5.3.0"
default-features = false
features = ["default-fancy", "parsing", "dump-load", "default-themes"]
optional = true

[dependencies.image]
workspace = true

[dependencies.taffy]
#version = "0.9.2"
git = "https://github.com/AustinMReppert/taffy"
rev = "c99a8e60bf43ea695abda49a4be2b07baf683934"
default-features = false
features = ["std", "taffy_tree", "flexbox", "content_size", "block_layout"]

[dependencies.chrono]
workspace = true

[target.'cfg(not(target_os = "android"))'.dependencies.winit]
workspace = true
features = []

[target.'cfg(target_os = "android")'.dependencies.winit]
workspace = true
features = ["android-native-activity"]

[dependencies.ui-events]
git = "https://github.com/AustinMReppert/ui-events"
rev = "7bc839dff9548883b0e0aaea85e48ab5f74caf05"
features = ["kurbo"]

[dependencies.ui-events-winit]
git = "https://github.com/AustinMReppert/ui-events"
rev = "7bc839dff9548883b0e0aaea85e48ab5f74caf05"
features = []

[dependencies.parley]
version = "0.7.0"
default-features = false
features = ["std"]

[target.'cfg(target_arch = "wasm32")'.dependencies.web-time]
version = "1.1.0"
default-features = false
features = []

[target.'cfg(target_arch = "wasm32")'.dependencies.wasm-bindgen]
version = "0.2.106"
default-features = false
features = ["std", "msrv"]

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3.83"
default-features = false
features = [
    "Document",
    "Window",
    "Element",
]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.open]
version = "5.3.3"
default-features = false
optional = true
features = []

[dependencies.craft_primitives]
path = "../craft_primitives"
default-features = false
version = "0.1.1"

[dependencies.craft_renderer]
path = "../craft_renderer"
default-features = false
version = "0.1.1"

[dependencies.craft_runtime]
path = "../craft_runtime"
default-features = false
version = "0.1.1"

[dependencies.craft_resource_manager]
path = "../craft_resource_manager"
default-features = false
version = "0.1.1"