[package]
name = "craft_runtime"
version = "0.1.1"
edition.workspace = true

[dependencies]

[target.'cfg(target_arch = "wasm32")'.dependencies.tokio]
workspace = true
default-features = false
features = ["sync", "time"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.open]
version = "5.3.2"
default-features = false
optional = true
features = []

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.tokio]
workspace = true
default-features = false
features = ["rt-multi-thread", "sync", "time"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.50"

[dependencies.cfg-if]
workspace = true